Fix toolbar alignment vs mb-element text alginment conflicts

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
@@ -9,7 +9,6 @@
 
   &.toolBarItem {
     // Reset toolbar text alignment (vs .itemsRight / .itemsCenter)
-    text-align: left;
     position: relative;
     z-index: 1;
     .state-check {
