--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/coordinatesdisplay.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/coordinatesdisplay.scss
@@ -14,7 +14,6 @@
 
 .toolBar {
   .mb-element-coordsdisplay {
-    text-align: left;
     min-width: 15em;
   }
 }
