--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -107,12 +107,15 @@ ul.toolBar, .toolBar > ul {
 
   .itemsRight {
     text-align:right;
-    .dropdown:not(.numeric) {
-      text-align: left;
+    .mb-element {
+      text-align: initial;
     }
   }
   .itemsCenter {
     text-align:center;
+    .mb-element {
+      text-align: initial;
+    }
   }
   // Undo fixed-pixel line height on body
   line-height: 1;
