--- a/src/Mapbender/WmsBundle/Resources/public/sass/element/dimensionshandler.scss
+++ b/src/Mapbender/WmsBundle/Resources/public/sass/element/dimensionshandler.scss
@@ -44,9 +44,6 @@
         top: -5px;
       }
     }
-    .dimensionset-title {
-      text-align: left; // counter text-align right inherited from toolbar list item
-    }
     .slider-wrap {
       padding: 0;
     }
